# textFixProject

./: CMakeLists.txt
A1P1/: Canada.map  Map.cpp  Map.h  MapDriver.cpp  README.md
A1P2/: Player.cpp  Player.h  PlayerDriver.cpp
A1P3/: Orders.cpp  Orders.h  OrdersDriver.cpp
A1P4/: Cards.cpp  Cards.h  CardsDriver.cpp
A1P5/: GameEngine.cpp  GameEngine.h  GameEngineDriver.cpp
